--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "k:[[20, 20], [60, 66]]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,13 +175,22 @@
     "            elif key[0] < node.keys[pos][0] : break\n",
     "            else:\n",
     "                pos+=1\n",
-    "        print(node, pos)1\n",
+    "        print(node, pos)\n",
     "        if node.child:\n",
     "            return self.search_key(node.child[pos],key)\n",
     "        else : return f\"NOT FOUND {key}\"\n",
     "\n",
-    "    def print_tree(self,node):\n",
-    "        pass\n",
+    "    def print_inorder(self,node):\n",
+    "        if node.child:\n",
+    "            for i in range(len(node.keys)):\n",
+    "                self.print_inorder(node.child[i])\n",
+    "                print(node.keys[i])\n",
+    "            self.print_inorder(node.child[-1])\n",
+    "        else:\n",
+    "            for i in node.keys:\n",
+    "                print(i)\n",
+    "            # print(node.keys)\n",
+    "\n",
     "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
@@ -208,30 +217,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k:[[20, 20], [60, 66]] 1\n",
-      "Find! key : [40, 40]\n"
+      "[1, 12]\n",
+      "[2, 2]\n",
+      "[10, 10]\n",
+      "[15, 15]\n",
+      "[18, 18]\n",
+      "[20, 20]\n",
+      "[30, 30]\n",
+      "[40, 40]\n",
+      "[50, 55]\n",
+      "[60, 66]\n",
+      "[66, 2]\n",
+      "[70, 77]\n",
+      "[75, 75]\n",
+      "[77, 77]\n",
+      "[78, 2]\n",
+      "[79, 2]\n",
+      "[80, 88]\n",
+      "[85, 85]\n",
+      "[90, 99]\n",
+      "[100, 2]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(k:[[40, 40]], [40, None])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bt.search_key(bt.root, [40,None])"
+    "# bt.search_key(bt.root, [40,None])\n",
+    "bt.insert_node(bt.root,[100,2])\n",
+    "bt.print_inorder(bt.root)"
    ]
   },
   {
