--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -67,10 +67,10 @@
     {
      "data": {
       "text/plain": [
-       "k:[[20, 20], [60, 66]]"
+       "k:[[60, 66]]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,15 +84,6 @@
     "        self.root=Node(True)\n",
     "        # self.root.isleaf = 'root'\n",
     "        # self.root=None\n",
-    "\n",
-    "    def printTree(self, node ,level=0):\n",
-    "        print(f'level {level} , length : {len(node.keys)} ', end=\" : \")\n",
-    "        for i in node.keys: \n",
-    "            print(i[0],end=\" \")\n",
-    "        level+=1\n",
-    "        if len(node.child)>0:\n",
-    "            for i in node.child: \n",
-    "                self.printTree(i, level)\n",
     "\n",
     "    # k : Key \n",
     "    # def insert_node(self,p_pos,p_node,node,key):\n",
@@ -164,21 +155,44 @@
     "                if len(node.keys)>=self.m:\n",
     "                    return node, node.keys[(self.m//2)]\n",
     "            return node, None\n",
-    "                \n",
+    "\n",
+    "    # def search_key_with_Parent(self,p_node,node,key):\n",
+    "    #     \"\"\" Find Key \n",
+    "    #     IF FIND : RETURN [Node, Key]\n",
+    "    #     else : RETURN [None, None] \"\"\"\n",
+    "    #     # print(node)\n",
+    "    #     pos=0\n",
+    "    #     while pos < len(node.keys):\n",
+    "    #         if key[0] == node.keys[pos][0]:\n",
+    "    #             # print(f'Find! key : {node.keys[pos]}')\n",
+    "    #             return p_node, node, key\n",
+    "    #         elif key[0] < node.keys[pos][0] : break\n",
+    "    #         else:\n",
+    "    #             pos+=1\n",
+    "    #     # print(node, pos)\n",
+    "    #     if node.child:\n",
+    "    #         return self.search_key(node, node.child[pos],key)\n",
+    "    #     else : \n",
+    "    #         return None, None, None\n",
     "    def search_key(self,node,key):\n",
+    "        \"\"\" Find Key \n",
+    "        IF FIND : RETURN [Node, Key]\n",
+    "        else : RETURN [None, None] \"\"\"\n",
     "        # print(node)\n",
     "        pos=0\n",
     "        while pos < len(node.keys):\n",
     "            if key[0] == node.keys[pos][0]:\n",
-    "                print(f'Find! key : {node.keys[pos]}')\n",
+    "                # print(f'Find! key : {node.keys[pos]}')\n",
     "                return node, key\n",
     "            elif key[0] < node.keys[pos][0] : break\n",
     "            else:\n",
     "                pos+=1\n",
-    "        print(node, pos)\n",
+    "        # print(node, pos)\n",
     "        if node.child:\n",
     "            return self.search_key(node.child[pos],key)\n",
-    "        else : return f\"NOT FOUND {key}\"\n",
+    "        else : \n",
+    "            return None, None\n",
+    "            # return f\"NOT FOUND {key}\"\n",
     "\n",
     "    def print_inorder(self,node):\n",
     "        if node.child:\n",
@@ -190,83 +204,166 @@
     "            for i in node.keys:\n",
     "                print(i)\n",
     "            # print(node.keys)\n",
+    "    \n",
+    "    def delete(self,node,key):\n",
+    "        pos = 0\n",
+    "        while pos<len(node.keys) and key[0] > node.keys[pos][0]:\n",
+    "            pos+=1\n",
+    "        if node.isleaf==True and pos<len(node.keys) and node.keys[pos][0]==key[0]:\n",
+    "            node.keys.pop(pos)\n",
+    "            return\n",
     "\n",
+    "\n",
+    "        if not node:\n",
+    "            return f\"THERE IS NO KEY {key}\"\n",
+    "        else:\n",
+    "            if node.isleaf: #Leaf에서 DELETE일경우\n",
+    "                pass\n",
+    "            else: # Internal Node에서 DELETE일경우\n",
+    "                pass\n",
+    "        pass\n",
     "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
-    "print(\"Start\")\n",
-    "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
-    "\n",
-    "bt = BTree(3)\n",
-    "bt.insert_node(bt.root,[10,10])\n",
-    "bt.insert_node(bt.root,[15,15])\n",
-    "bt.insert_node(bt.root,[18,18])\n",
-    "bt.insert_node(bt.root,[30,30])\n",
-    "bt.insert_node(bt.root,[20,20])  \n",
-    "bt.insert_node(bt.root,[40,40])\n",
-    "bt.insert_node(bt.root,[50,55])\n",
-    "bt.insert_node(bt.root,[60,66])\n",
-    "bt.insert_node(bt.root,[70,77])\n",
-    "bt.insert_node(bt.root,[80,88])\n",
-    "bt.insert_node(bt.root,[90,99])\n",
-    "bt.insert_node(bt.root,[85,85])\n",
-    "bt.insert_node(bt.root,[75,75])\n",
-    "bt.insert_node(bt.root,[77,77])\n",
-    "bt.root"
+    "# print(\"Start\")\n",
+    "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 12]\n",
-      "[2, 2]\n",
-      "[10, 10]\n",
-      "[15, 15]\n",
-      "[18, 18]\n",
-      "[20, 20]\n",
-      "[30, 30]\n",
-      "[40, 40]\n",
-      "[50, 55]\n",
-      "[60, 66]\n",
-      "[66, 2]\n",
-      "[70, 77]\n",
-      "[75, 75]\n",
-      "[77, 77]\n",
-      "[78, 2]\n",
-      "[79, 2]\n",
-      "[80, 88]\n",
-      "[85, 85]\n",
-      "[90, 99]\n",
-      "[100, 2]\n"
+      "[1, 10]\n",
+      "[2, 20]\n",
+      "[3, 30]\n",
+      "[4, 40]\n",
+      "[5, 50]\n",
+      "[6, 60]\n",
+      "[7, 70]\n",
+      "[8, 80]\n",
+      "[9, 90]\n",
+      "[10, 100]\n",
+      "[11, 110]\n",
+      "[12, 120]\n",
+      "[13, 130]\n",
+      "[14, 140]\n",
+      "[15, 150]\n",
+      "[16, 160]\n",
+      "[17, 170]\n",
+      "[18, 180]\n",
+      "[19, 190]\n",
+      "[20, 200]\n",
+      "[21, 210]\n",
+      "[22, 220]\n",
+      "[23, 230]\n",
+      "[24, 240]\n",
+      "[25, 250]\n",
+      "[26, 260]\n",
+      "[27, 270]\n",
+      "[28, 280]\n",
+      "[29, 290]\n",
+      "[30, 300]\n",
+      "[31, 310]\n",
+      "[32, 320]\n",
+      "[33, 330]\n",
+      "[34, 340]\n",
+      "[35, 350]\n",
+      "[36, 360]\n",
+      "[37, 370]\n",
+      "[38, 380]\n",
+      "[39, 390]\n",
+      "[40, 400]\n",
+      "[41, 410]\n",
+      "[42, 420]\n",
+      "[43, 430]\n",
+      "[44, 440]\n",
+      "[45, 450]\n",
+      "[46, 460]\n",
+      "[47, 470]\n",
+      "[48, 480]\n",
+      "[49, 490]\n",
+      "[50, 500]\n",
+      "[51, 510]\n",
+      "[52, 520]\n",
+      "[53, 530]\n",
+      "[54, 540]\n",
+      "[55, 550]\n",
+      "[56, 560]\n",
+      "[57, 570]\n",
+      "[58, 580]\n",
+      "[59, 590]\n",
+      "[60, 600]\n",
+      "[61, 610]\n",
+      "[62, 620]\n",
+      "[63, 630]\n",
+      "[64, 640]\n",
+      "[65, 650]\n",
+      "[66, 660]\n",
+      "[67, 670]\n",
+      "[68, 680]\n",
+      "[69, 690]\n",
+      "[70, 700]\n",
+      "[71, 710]\n",
+      "[72, 720]\n",
+      "[73, 730]\n",
+      "[74, 740]\n",
+      "[75, 750]\n",
+      "[76, 760]\n",
+      "[77, 770]\n",
+      "[78, 780]\n",
+      "[79, 790]\n",
+      "[80, 800]\n",
+      "[81, 810]\n",
+      "[82, 820]\n",
+      "[83, 830]\n",
+      "[84, 840]\n",
+      "[85, 850]\n",
+      "[86, 860]\n",
+      "[87, 870]\n",
+      "[88, 880]\n",
+      "[89, 890]\n",
+      "[90, 900]\n",
+      "[91, 910]\n",
+      "[92, 920]\n",
+      "[93, 930]\n",
+      "[94, 940]\n",
+      "[95, 950]\n",
+      "[96, 960]\n",
+      "[97, 970]\n",
+      "[98, 980]\n",
+      "[99, 990]\n"
      ]
     }
    ],
    "source": [
-    "# bt.search_key(bt.root, [40,None])\n",
-    "bt.insert_node(bt.root,[100,2])\n",
+    "bt = BTree(5)\n",
+    "for i in range(1,100):\n",
+    "    bt.insert_node(bt.root, [i,i*10])\n",
+    "# bt.insert_node(bt.root,[100,2])\n",
     "bt.print_inorder(bt.root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(k:[[20, 11], [60, 11]],\n",
+       "(k:[[27, 270], [54, 540]],\n",
        " '---',\n",
-       " [k:[[15, 11]], k:[[40, 11]], k:[[75, 11], [80, 11]]])"
+       " [k:[[9, 90], [18, 180]],\n",
+       "  k:[[36, 360], [45, 450]],\n",
+       "  k:[[63, 630], [72, 720], [81, 810], [90, 900]]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,16 +374,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([k:[[10, 11]], k:[[18, 11]]], [k:[[30, 11]], k:[[50, 11]]])"
+       "([k:[[3, 30], [6, 60]], k:[[12, 120], [15, 150]], k:[[21, 210], [24, 240]]],\n",
+       " [k:[[30, 300], [33, 330]],\n",
+       "  k:[[39, 390], [42, 420]],\n",
+       "  k:[[48, 480], [51, 510]]])"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,29 +397,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicates key [50, 11]\n"
+      "Find! key : [8, 80]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(k:[[20, 11], [60, 11]], None)"
+       "True"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bt.insert_node(bt.root,[50,11])"
+    "bt.search_key(bt.root,[8,None])[0].isleaf\n"
    ]
   }
  ],
