--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,24 +211,36 @@
     "        pos = 0\n",
     "        while pos<len(node.keys) and key[0] > node.keys[pos][0]:\n",
     "            pos+=1\n",
-    "        if node.isleaf==True and pos<len(node.keys) and node.keys[pos][0]==key[0]:\n",
-    "            node.keys.pop(pos)\n",
-    "            return\n",
+    "        if node.isleaf==True : # Leaf 에서 키를 찾든 못찾든\n",
+    "            if pos<len(node.keys) and key[0]==node.keys[pos][0]:\n",
+    "                node.keys.pop(pos)\n",
+    "                return \"DELETE FROM LEAF COMPLETED\" # 삭제연산완료표시\n",
+    "            else \n",
+    "                return \"NOT FOUND\" # 리프까지 갔는데 못찾음\n",
+    "        else: # Leaf가 아닌 경우\n",
+    "            if pos < len(node.keys):\n",
+    "                if key[0]==node.keys[pos][0]:\n",
+    "                    # 리프가 아닌데 찾은경우\n",
+    "                    pass ## TODO : Internal Node Deletion Process\n",
+    "                else: # 리프가 아닌데 키값도 아닌데 pos는찾은경우 => 아래로 내려가자\n",
+    "                    self.delete(node.child[pos],key)\n",
+    "            \n",
+    "            # if len(node.child[pos].keys)\n",
+    "                \n",
     "\n",
-    "\n",
-    "        if not node:\n",
-    "            return f\"THERE IS NO KEY {key}\"\n",
-    "        else:\n",
-    "            if node.isleaf: #Leaf에서 DELETE일경우\n",
-    "                pass\n",
-    "            else: # Internal Node에서 DELETE일경우\n",
-    "                pass\n",
-    "        pass\n",
     "\n",
     "\n",
     "# if __name__==\"__main__\":\n",
     "# print(\"Start\")\n",
     "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "      20  ,  40\n",
+    "10,15   25,30   50"
    ]
   },
   {
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -309,14 +321,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt.delete(bt.root,[37,0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +356,7 @@
        "  k:[[39, 390], [42, 420], [45, 450]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
